Fixed canvas cells overflowing parent and added background color functionality

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ h1 {
 #options-container {
     border: 1px solid black;
     width: 20vw;
-    height: 60vh;
+    height: 400px;
     padding: 2em;
     display: flex;
     flex-direction: column;
